--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="src/imagens/favicon.png" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet">
                 
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -24,7 +26,7 @@
                     <a href="#comprar">Comprar</a>
                 </li>
                 <li>
-                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte</a>
+                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte <img src="./src/imagens/icone-link.svg" alt="Icone de link de suporte"></a>
                 </li>
             </ul>
         </nav>
@@ -48,7 +50,7 @@
     <section class="compre-ja" id="comprar">
         <h2 class="titulo">Compre já</h2>
         <div class="cartao">
-            <img src="./src/imagens/gta5.jpg" alt="Capa do jogo GTA V">
+            <img class="capa-do-jogo" src="./src/imagens/gta5.jpg" alt="Capa do jogo GTA V">
 
             <div class="informacoes"></div>
             <h3>Grand Theft Auto V</h3>
@@ -70,25 +72,26 @@
                     <li><img src="./src/imagens/logo-pc.svg" alt="Logo PC"></li>
                 </ul>
             </p>
+
+            <button class="btn-plataforma">
+                Selecione a plataforma
+                <ul class="plataformas">
+                    <li>
+                        <img src="./src/imagens/logo-ps5.svg" alt="Logo PlayStation 5">
+                    </li>
+                    <li>
+                        <img src="./src/imagens/logo-xbox-series-s.svg" alt="Logo Xbox Series S">
+                    </li>
+                    <li>
+                        <img src="./src/imagens/logo-ps4.svg" alt="Logo PlayStation 4">
+                    </li>
+                    <li>
+                        <img src="./src/imagens/logo-xbox-one.svg" alt="Logo Xbox One">
+                    </li>
+                    <li><img src="./src/imagens/logo-pc.svg" alt="Logo PC"></li>
+                </ul>
+            </button>
         </div>
-        <button class="btn-plataforma">
-            Selecione a plataforma
-            <ul class="plataformas">
-                <li>
-                    <img src="./src/imagens/logo-ps5.svg" alt="Logo PlayStation 5">
-                </li>
-                <li>
-                    <img src="./src/imagens/logo-xbox-series-s.svg" alt="Logo Xbox Series S">
-                </li>
-                <li>
-                    <img src="./src/imagens/logo-ps4.svg" alt="Logo PlayStation 4">
-                </li>
-                <li>
-                    <img src="./src/imagens/logo-xbox-one.svg" alt="Logo Xbox One">
-                </li>
-                <li><img src="./src/imagens/logo-pc.svg" alt="Logo PC"></li>
-            </ul>
-        </button>
     </section>
 </body>
 </html>
